<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoGo运动</string>
    <string name="action_settings">Settings</string>
    <string name="home_title">首页</string>
    <!-- <string name="login">登录登陆</string> -->
    <string name="addSport">发起活动</string>
    <string name="showinmap">地图显示</string>
    <string name="fastmatch">速配好友</string>
    <string name="title_activity_friend">好友资料</string>
    <string name="title_activity_add_sport">AddSportActivity</string>
    <string name="title_activity_map">地图</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="title_activity_pick_place">PickPlaceActivity</string>
    <string name="title_activity_route_plan">RoutePlanActivity</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_cities">CitysActivity</string>
    <string name="title_activity_match_result">MatchResultActivity</string>
    <string name="title_activity_modification">ModificationActivity</string>
    <string name="title_activity_sport_detail">SportDetailActivity</string>
    <string name="title_activity_password">PasswordActivity</string>
     <string name="file">[文件]</string>
    <string name="picture">[图片]</string>
    <string name="receive_the_passthrough">Receive cmd message : action：</string>
    <string name="group_chat">Group chat</string>
    <string name="Application_and_notify">Invitation and notification</string>
    <string name="search_new">Search</string>
    <string name="search">搜索</string>
    <string name="Invite_you_to_join_a_group_chat"> Invite you to join this group</string>
    <string name="Agreed_to_your_group_chat_application">Accepted your group application</string>
    <string name="Send_the_following_pictures">Send the following pictures?</string>
    <string name="homepage_qq_landing">QQ登陆</string>
    <string name="homepage_landing">登陆</string>
    <string name="homepage_login">注册</string>
    <string name="userceter_exit">退出登录</string>

    <drawable name="holdsport_time_normal">#F0FFFF</drawable>
    <drawable name="holdsport_time_pressed">#B0E0E6</drawable>

    <!-- 登陆界面 -->
    <drawable name="button_login_normal">#1E90FF</drawable>
    <drawable name="button_login_pressed">#6A5ACE</drawable>
    <drawable name="button_register_normal">#C0C0C0</drawable>
    <drawable name="button_register_pressed">#808A87</drawable>
    <drawable name="button_qq_normal">#FA8072</drawable>
    <drawable name="button_qq_pressed">#FF0000</drawable>

    <!-- 个人中心 -->
    <drawable name="centre_button_normal">#00000000</drawable>
    <drawable name="centre_button_pressed">#FFFF00</drawable>
    <drawable name="centre_button_exit_normal">#00000000</drawable>
    <drawable name="centre_button_exit_pressed">#DCDCDC</drawable>

</resources>