<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myself.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/addSport"
        android:orderInCategory="90"
        android:showAsAction="always"
        android:title="@string/addSport"
        />
    <item
        android:id="@+id/showinmap"
        android:orderInCategory="80"
        android:showAsAction="always"
        android:title="@string/showinmap"
        />
    <item
        android:id="@+id/fastmatch"
        android:orderInCategory="70"
        android:showAsAction="ifRoom"
        android:title="@string/fastmatch"
        />

</menu>
