<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.ofmain.LoginActivity$PlaceholderFragment" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/pagehome_pic1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入帐号"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:textSize="18sp" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/loader"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_button_login"
        android:text="@string/homepage_landing"
        android:textColor="#ffffff"
        android:textSize="@dimen/homepage_text_size" />

    <Button
        android:id="@+id/regist"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_register"
        android:text="@string/homepage_login"
        android:textColor="#ffffff"
        android:textSize="@dimen/homepage_text_size" />

    <Button
        android:id="@+id/btn_qq_login"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_qq"
        android:text="@string/homepage_qq_landing"
        android:textColor="#ffffff"
        android:textSize="@dimen/homepage_text_size" />

</LinearLayout>